<resources>
    <string name="app_name">RealtimeBus</string>
    <string name="query">Query</string>

    <string name="error_connection">Connection error！</string>
    <string name="error_get_bus">Get bus on line error！</string>
    <string name="error_unknown">"Unknown error，please retry！"</string>
    <string name="error_search_line">"Can't find this line or it's not supported yet，please retry！"</string>
    <string name="error_no_bus">"No bus is on the road！"</string>
    <string name="error_only_one_direction">"This line only has one direction！"</string>

    <string name="try_again">Try again, please!</string>
    <string name="menu_settings_title">Settings</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="menu_auto_refresh_title">Auto Refresh</string>


    <string name="bottom_track">Track</string>
    <string name="bottom_profile">My</string>

    <!--Preferences-->
    <string name="preferences_settings_key_auto_refresh_interval" translatable="false">preferences_settings_key_auto_refresh_interval</string>
    <string name="preferences_settings_title_auto_refresh_interval">Auto refresh time interval (seconde=s)</string>
    <string name="preferences_settings_key_notification" translatable="false">preferences_settings_key_notification</string>
    <string name="preferences_settings_title_notification">Notification</string>
    <string name="preferences_settings_summary_notification">Show notification when bus arrived</string>
    <string name="preferences_settings_key_pop_up_notification" translatable="false">preferences_settings_key_pop_up_notification</string>
    <string name="preferences_settings_title_pop_up_notification">Popup notification</string>
    <string name="preferences_settings_summary_pop_up_notification">Show popup notification when bus arrived</string>
    <string name="preferences_settings_key_track_background" translatable="false">preferences_settings_key_track_background</string>
    <string name="preferences_settings_title_track_background">Track background if alarm is set</string>
    <string name="preferences_settings_summary_track_background">Track bus position when app is closed</string>


    <!--All-->
    <string name="preferences_settings_summary_on">On</string>
    <string name="preferences_settings_summary_off">Off</string>
    <string name="menu_share_title">Share</string>
    <string name="action_share">Share</string>
    <string name="share_text">  Just found a excellent App to track bus status in Zhuhai 「Zhuhai Bus」，and it can inform you when bus arrive，awesome! Download it here：http://fir.im/2feu </string>

    <!--Service-->
    <string name="service_track_notification_text">Bus tracking service is running</string>
    <string name="service_track_background_notification_text">Background bus tracking service is running</string>
    <string name="service_stop_track_text">Stop</string>

</resources>
